[project]
name = "In commemoration of the retirement of ufc fighter paul"
version = "0.2.0"
description = ""
authors = [
    {name = "dmario24", email = "pjyrhee@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
